2009-12-17 Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSTableView.m (-setDropRow:dropOperation:, -draggingUpdated):
	Corrected to support a drop on root with -1 as the drop row as explained 
	in Cocoa documentation.

2009-12-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSThemeDrawing.m (-drawProgressIndicator:withBounds:...):
	Prevent division by zero exception if no images are available for
	a spinning or indeterminate progress indicator.

	* Source/NSProgressIndicator.m (-setIndeterminate): Ensure that a
	running animation is stopped when an indeterminate indicator is
	changed into a determinate one.

2009-12-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSComboBoxCell.m (-drawInteriorWithFrame:inView:): Fix
	bug where the field editor of an edited combo box cell overlaps
	the cell's ellipsis button.

	* Source/NSComboBoxCell.m (-endEditing): Make sure the pop up
	window is closed when editing ends.

	* Source/NSComboBoxCell.m (-validateSelection): Remove obsolete
	workaround code.

2009-12-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSCell.m (-wraps, -setWraps:, -setLineBreakMode:,
	-initWithCoder:): Phase out the wraps cell attribute since it is
	implied by the lineBreakMode attribute. Note that with this change
	cells now wrap by default, as has always been the case on OS X.

	* Source/NSBrowserCell.m (-initTextCell:, -initImageCell:):
	* Source/NSTableColumn.m (-initWithIdentifier): Set default line
	break mode to NSLineBreakByTruncatingTail as on OS X.

	* Source/NSCell.m (-setUpFieldEditorAttributes:): Set the typing
	attributes of the field editor so that it uses the same paragraph
	style and in particular the same line break mode as the edited
	cell. This fixes an inconsistency where wrapped text would be
	displayed in a single line during editing.

2009-12-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSCell.m (-_setupTextWithFrame:inView:editor:delegate:range):
	* Source/NSCell.m (-endEditing:):