@@ -1,3 +1,13 @@
+2009-12-11 Eric Wasylishen <ewasylishen@gmail.com>
+
+	* Source/NSSliderCell.m:
+	Rework the handling of maxValue and minValue. The cell's value is now
+	clamped to the permisible range when it is set, rather than in
+	floatValue, matching OS X behaviour. setMinValue: and setMaxValue:
+	also clamp the current value.
+	Also make NSSliderCell continuous by default when unarchived (matches
+	OS X).
+
 2009-12-17 Quentin Mathe <quentin.mathe@gmail.com>
 
 	* Source/NSTableView.m (-setDropRow:dropOperation:, -draggingUpdated):
